--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,10 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MiniChallenge" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<!--        <item name="colorPrimary">@color/black</item>-->
+<!--        <item name="colorSecondary">@color/black</item>-->
+<!--        <item name="colorAccent">@color/black</item>-->
+<!--        <item name="buttonStyle">@drawable/ic_launcher_background</item>-->
     </style>
 
     <style name="Theme.MiniChallenge" parent="Base.Theme.MiniChallenge" />
