--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="200dp"
         android:gravity="center"
         android:text="@string/app_name"
+        android:textAlignment="center"
         android:textSize="100px"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
