--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -29,6 +29,16 @@
         app:layout_constraintTop_toBottomOf="@id/end_game_text" />
 
     <Button
+        android:id="@+id/restart_buttton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Restart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/score_text"/>
+
+    <Button
         android:id="@+id/accueil_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +46,7 @@
         android:text="Accueil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/score_text" />
+        app:layout_constraintTop_toBottomOf="@id/restart_buttton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
