--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="TextView"
+        android:text=""
         android:textSize="100px"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
